# ScreenCapture

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
src/: encoder.cpp  encoder.hpp  main.cpp  util.cpp  util.h  util.hpp  video_capture.cpp  wgc.cpp  wgc.hpp
